--- a/BackEnd/ApiMegev/appsettings.json
+++ b/BackEnd/ApiMegev/appsettings.json
@@ -6,8 +6,7 @@
     "ExpirationInMinutes": 120
   },
   "ConnectionStrings": {
-  //  "DefaultConnection": "Server=megev-tray.mysql.database.azure.com;Port=3306;User ID=megev;Password=m3g3vtr4y#;Database=megev-tray"cd   // Azure
-   "DefaultConnection": "Server=localhost;Port=3306;User ID=root;Password=1234;Database=megev_tray" 
+   "DefaultConnection": "Server=localhost;Port=3306;User ID=root;Password=;Database=megev_tray" 
   },
   "Logging": {
     "LogLevel": {
