--- a/BackEnd/ApiMegev/appsettings.json
+++ b/BackEnd/ApiMegev/appsettings.json
@@ -6,7 +6,7 @@
     "ExpirationInMinutes": 120
   },
   "ConnectionStrings": {
-   "DefaultConnection": "Server=localhost;Port=3306;User ID=root;Password=;Database=megev_tray" 
+   "DefaultConnection": "Server=localhost;Port=3306;User ID=root;Password=1234;Database=megev_tray" 
   },
   "Logging": {
     "LogLevel": {
