--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
+    "canvas-confetti": "^1.9.3",
     "intro.js": "^8.0.0-beta.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
